# fastapi_learn

./: Makefile  README.md  docker-compose.yml  flake8.conf  main.py  pyproject.toml
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
db/: Makefile
db/migrations/: 001_create_fastapi_db.down.sql  001_create_fastapi_db.up.sql  002_create_users.down.sql  002_create_users.up.sql  003_alter_fastapi_db.down.sql  003_alter_fastapi_db.up.sql  004_create_favorite_table.down.sql  004_create_favorite_table.up.sql
db/sql/: 0000_init.sql
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
