[tool.poetry]
name = "fastapi_learn"
version = "0.1.0"
description = "FastAPI Learn"
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
