[tool.poetry]
name = "fastapi_learn"
version = "0.1.0"
description = "FastAPI Learn"
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.0.8"}
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.31"
pytest = "^7.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
