[tool.poetry]
name = "fastapi_learn"
version = "0.1.0"
description = "FastAPI Learn"
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.115.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.0.8"}
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^2.0.0"
pytest = "^7.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = {version = "^23.0.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
